--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,6 +25,6 @@
 			"@/*": ["./src/*"]
 		}
 	},
-	"include": ["src"],
+	"include": ["src", "src/pages/dashboard/email/components/tools.ts"],
 	"references": [{ "path": "./tsconfig.node.json" }]
 }
