--- a/package.json
+++ b/package.json
@@ -39,9 +39,12 @@
     "@tailwindcss/container-queries": "^0.1.1",
     "@tailwindcss/typography": "^0.5.10",
     "@tanstack/react-table": "^8.13.2",
+    "@toast-ui/calendar": "^2.1.3",
+    "@toast-ui/react-calendar": "^2.1.3",
     "@types/editorjs__header": "^2.6.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "dayjs": "^1.11.10",
     "framer-motion": "^11.0.13",
     "localforage": "^1.10.0",
     "lucide-react": "^0.344.0",
