--- a/package.json
+++ b/package.json
@@ -24,6 +24,12 @@
     "@editorjs/raw": "^2.5.0",
     "@editorjs/simple-image": "^1.6.0",
     "@editorjs/table": "^2.3.0",
+    "@fullcalendar/core": "^6.1.11",
+    "@fullcalendar/daygrid": "^6.1.11",
+    "@fullcalendar/interaction": "^6.1.11",
+    "@fullcalendar/react": "^6.1.11",
+    "@fullcalendar/resource": "^6.1.11",
+    "@fullcalendar/timegrid": "^6.1.11",
     "@hookform/resolvers": "^3.3.4",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-checkbox": "^1.0.4",
@@ -40,7 +46,6 @@
     "@tailwindcss/typography": "^0.5.10",
     "@tanstack/react-table": "^8.13.2",
     "@toast-ui/calendar": "^2.1.3",
-    "@toast-ui/react-calendar": "^2.1.3",
     "@types/editorjs__header": "^2.6.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
