--- a/package.json
+++ b/package.json
@@ -42,11 +42,14 @@
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-toggle": "^1.0.3",
     "@radix-ui/react-tooltip": "^1.0.7",
+    "@react-oauth/google": "^0.12.1",
+    "@reduxjs/toolkit": "^2.2.4",
     "@tailwindcss/container-queries": "^0.1.1",
     "@tailwindcss/typography": "^0.5.10",
     "@tanstack/react-table": "^8.13.2",
     "@toast-ui/calendar": "^2.1.3",
     "@types/editorjs__header": "^2.6.3",
+    "axios": "^1.6.8",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "dayjs": "^1.11.10",
@@ -59,6 +62,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.0",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^6.22.2",
     "sort-by": "^0.0.2",
     "tailwind-merge": "^2.2.1",
