--- a/package.json
+++ b/package.json
@@ -1,88 +1,89 @@
 {
-  "name": "intabook",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "@editorjs/attaches": "^1.3.0",
-    "@editorjs/checklist": "^1.6.0",
-    "@editorjs/delimiter": "^1.4.0",
-    "@editorjs/editorjs": "^2.29.0",
-    "@editorjs/embed": "^2.7.0",
-    "@editorjs/header": "^2.8.1",
-    "@editorjs/image": "^2.9.0",
-    "@editorjs/link": "^2.6.2",
-    "@editorjs/list": "^1.9.0",
-    "@editorjs/paragraph": "^2.11.3",
-    "@editorjs/quote": "^2.6.0",
-    "@editorjs/raw": "^2.5.0",
-    "@editorjs/simple-image": "^1.6.0",
-    "@editorjs/table": "^2.3.0",
-    "@fullcalendar/core": "^6.1.11",
-    "@fullcalendar/daygrid": "^6.1.11",
-    "@fullcalendar/interaction": "^6.1.11",
-    "@fullcalendar/react": "^6.1.11",
-    "@fullcalendar/resource": "^6.1.11",
-    "@fullcalendar/timegrid": "^6.1.11",
-    "@hookform/resolvers": "^3.3.4",
-    "@radix-ui/react-avatar": "^1.0.4",
-    "@radix-ui/react-checkbox": "^1.0.4",
-    "@radix-ui/react-dialog": "^1.0.5",
-    "@radix-ui/react-dropdown-menu": "^2.0.6",
-    "@radix-ui/react-label": "^2.0.2",
-    "@radix-ui/react-scroll-area": "^1.0.5",
-    "@radix-ui/react-select": "^2.0.0",
-    "@radix-ui/react-slot": "^1.0.2",
-    "@radix-ui/react-tabs": "^1.0.4",
-    "@radix-ui/react-toggle": "^1.0.3",
-    "@radix-ui/react-tooltip": "^1.0.7",
-    "@react-oauth/google": "^0.12.1",
-    "@reduxjs/toolkit": "^2.2.4",
-    "@tailwindcss/container-queries": "^0.1.1",
-    "@tailwindcss/typography": "^0.5.10",
-    "@tanstack/react-table": "^8.13.2",
-    "@toast-ui/calendar": "^2.1.3",
-    "@types/editorjs__header": "^2.6.3",
-    "axios": "^1.6.8",
-    "class-variance-authority": "^0.7.0",
-    "clsx": "^2.1.0",
-    "dayjs": "^1.11.10",
-    "framer-motion": "^11.0.13",
-    "localforage": "^1.10.0",
-    "lucide-react": "^0.344.0",
-    "match-sorter": "^6.3.4",
-    "next-themes": "^0.2.1",
-    "path": "^0.12.7",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-hook-form": "^7.51.0",
-    "react-redux": "^9.1.2",
-    "react-router-dom": "^6.22.2",
-    "sort-by": "^0.0.2",
-    "tailwind-merge": "^2.2.1",
-    "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.22.4"
-  },
-  "devDependencies": {
-    "@types/node": "^20.11.24",
-    "@types/react": "^18.2.56",
-    "@types/react-dom": "^18.2.19",
-    "@typescript-eslint/eslint-plugin": "^7.0.2",
-    "@typescript-eslint/parser": "^7.0.2",
-    "@vitejs/plugin-react": "^4.2.1",
-    "autoprefixer": "^10.4.18",
-    "eslint": "^8.56.0",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.5",
-    "postcss": "^8.4.35",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5.2.2",
-    "vite": "^5.1.4"
-  }
+	"name": "intabook",
+	"private": true,
+	"version": "0.0.0",
+	"type": "module",
+	"scripts": {
+		"dev": "vite",
+		"build": "tsc && vite build",
+		"lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+		"preview": "vite preview"
+	},
+	"proxy": "https://jinjigo-server.onrender.com",
+	"dependencies": {
+		"@editorjs/attaches": "^1.3.0",
+		"@editorjs/checklist": "^1.6.0",
+		"@editorjs/delimiter": "^1.4.0",
+		"@editorjs/editorjs": "^2.29.0",
+		"@editorjs/embed": "^2.7.0",
+		"@editorjs/header": "^2.8.1",
+		"@editorjs/image": "^2.9.0",
+		"@editorjs/link": "^2.6.2",
+		"@editorjs/list": "^1.9.0",
+		"@editorjs/paragraph": "^2.11.3",
+		"@editorjs/quote": "^2.6.0",
+		"@editorjs/raw": "^2.5.0",
+		"@editorjs/simple-image": "^1.6.0",
+		"@editorjs/table": "^2.3.0",
+		"@fullcalendar/core": "^6.1.11",
+		"@fullcalendar/daygrid": "^6.1.11",
+		"@fullcalendar/interaction": "^6.1.11",
+		"@fullcalendar/react": "^6.1.11",
+		"@fullcalendar/resource": "^6.1.11",
+		"@fullcalendar/timegrid": "^6.1.11",
+		"@hookform/resolvers": "^3.3.4",
+		"@radix-ui/react-avatar": "^1.0.4",
+		"@radix-ui/react-checkbox": "^1.0.4",
+		"@radix-ui/react-dialog": "^1.0.5",
+		"@radix-ui/react-dropdown-menu": "^2.0.6",
+		"@radix-ui/react-label": "^2.0.2",
+		"@radix-ui/react-scroll-area": "^1.0.5",
+		"@radix-ui/react-select": "^2.0.0",
+		"@radix-ui/react-slot": "^1.0.2",
+		"@radix-ui/react-tabs": "^1.0.4",
+		"@radix-ui/react-toggle": "^1.0.3",
+		"@radix-ui/react-tooltip": "^1.0.7",
+		"@react-oauth/google": "^0.12.1",
+		"@reduxjs/toolkit": "^2.2.4",
+		"@tailwindcss/container-queries": "^0.1.1",
+		"@tailwindcss/typography": "^0.5.10",
+		"@tanstack/react-table": "^8.13.2",
+		"@toast-ui/calendar": "^2.1.3",
+		"@types/editorjs__header": "^2.6.3",
+		"axios": "^1.6.8",
+		"class-variance-authority": "^0.7.0",
+		"clsx": "^2.1.0",
+		"dayjs": "^1.11.10",
+		"framer-motion": "^11.0.13",
+		"localforage": "^1.10.0",
+		"lucide-react": "^0.344.0",
+		"match-sorter": "^6.3.4",
+		"next-themes": "^0.2.1",
+		"path": "^0.12.7",
+		"react": "^18.2.0",
+		"react-dom": "^18.2.0",
+		"react-hook-form": "^7.51.0",
+		"react-redux": "^9.1.2",
+		"react-router-dom": "^6.22.2",
+		"sort-by": "^0.0.2",
+		"tailwind-merge": "^2.2.1",
+		"tailwindcss-animate": "^1.0.7",
+		"zod": "^3.22.4"
+	},
+	"devDependencies": {
+		"@types/node": "^20.11.24",
+		"@types/react": "^18.2.56",
+		"@types/react-dom": "^18.2.19",
+		"@typescript-eslint/eslint-plugin": "^7.0.2",
+		"@typescript-eslint/parser": "^7.0.2",
+		"@vitejs/plugin-react": "^4.2.1",
+		"autoprefixer": "^10.4.18",
+		"eslint": "^8.56.0",
+		"eslint-plugin-react-hooks": "^4.6.0",
+		"eslint-plugin-react-refresh": "^0.4.5",
+		"postcss": "^8.4.35",
+		"tailwindcss": "^3.4.1",
+		"typescript": "^5.2.2",
+		"vite": "^5.1.4"
+	}
 }
