--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
 		"@radix-ui/react-toggle": "^1.0.3",
 		"@radix-ui/react-tooltip": "^1.0.7",
 		"@react-oauth/google": "^0.12.1",
+		"@redux-saga/core": "^1.3.0",
 		"@reduxjs/toolkit": "^2.2.4",
 		"@tailwindcss/container-queries": "^0.1.1",
 		"@tailwindcss/typography": "^0.5.10",
@@ -65,6 +66,8 @@
 		"react-query": "^3.39.3",
 		"react-redux": "^9.1.2",
 		"react-router-dom": "^6.22.2",
+		"redux": "^5.0.1",
+		"redux-persist": "^6.0.0",
 		"sort-by": "^0.0.2",
 		"tailwind-merge": "^2.2.1",
 		"tailwindcss-animate": "^1.0.7",
