--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
 		"react-router-dom": "^6.22.2",
 		"redux": "^5.0.1",
 		"redux-persist": "^6.0.0",
+		"sonner": "^1.4.41",
 		"sort-by": "^0.0.2",
 		"tailwind-merge": "^2.2.1",
 		"tailwindcss-animate": "^1.0.7",
