--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 VITE_API_URL=https://jinjigo-server.onrender.com
+VITE_GOOGLE_CLIENT_ID=715418971055-3qa11juuta4cjhifjvp1eg5b5e3r2ovc.apps.googleusercontent.com
