--- a/package.json
+++ b/package.json
@@ -33,9 +33,11 @@
 		"@hookform/resolvers": "^3.3.4",
 		"@radix-ui/react-avatar": "^1.0.4",
 		"@radix-ui/react-checkbox": "^1.0.4",
+		"@radix-ui/react-context-menu": "^2.1.5",
 		"@radix-ui/react-dialog": "^1.0.5",
 		"@radix-ui/react-dropdown-menu": "^2.0.6",
 		"@radix-ui/react-label": "^2.0.2",
+		"@radix-ui/react-popover": "^1.0.7",
 		"@radix-ui/react-scroll-area": "^1.0.5",
 		"@radix-ui/react-select": "^2.0.0",
 		"@radix-ui/react-slot": "^1.0.2",
@@ -53,6 +55,7 @@
 		"axios": "^1.7.1",
 		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.1.0",
+		"date-fns": "^3.6.0",
 		"dayjs": "^1.11.10",
 		"framer-motion": "^11.0.13",
 		"localforage": "^1.10.0",
@@ -61,6 +64,7 @@
 		"next-themes": "^0.2.1",
 		"path": "^0.12.7",
 		"react": "^18.2.0",
+		"react-day-picker": "^8.10.1",
 		"react-dom": "^18.2.0",
 		"react-hook-form": "^7.51.0",
 		"react-query": "^3.39.3",
