Feat: Add Firebase and add file upload to drag-drop-files

--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
 		"clsx": "^2.1.0",
 		"date-fns": "^3.6.0",
 		"dayjs": "^1.11.10",
+		"firebase": "^10.12.2",
 		"framer-motion": "^11.0.13",
 		"localforage": "^1.10.0",
 		"lucide-react": "^0.344.0",
