--- a/package.json
+++ b/package.json
@@ -36,10 +36,12 @@
 		"@radix-ui/react-context-menu": "^2.1.5",
 		"@radix-ui/react-dialog": "^1.0.5",
 		"@radix-ui/react-dropdown-menu": "^2.0.6",
+		"@radix-ui/react-hover-card": "^1.1.1",
 		"@radix-ui/react-label": "^2.0.2",
 		"@radix-ui/react-popover": "^1.0.7",
 		"@radix-ui/react-scroll-area": "^1.0.5",
 		"@radix-ui/react-select": "^2.0.0",
+		"@radix-ui/react-separator": "^1.1.0",
 		"@radix-ui/react-slot": "^1.0.2",
 		"@radix-ui/react-tabs": "^1.0.4",
 		"@radix-ui/react-toggle": "^1.0.3",
@@ -50,6 +52,11 @@
 		"@tailwindcss/container-queries": "^0.1.1",
 		"@tailwindcss/typography": "^0.5.10",
 		"@tanstack/react-table": "^8.13.2",
+		"@tiptap/extension-color": "^2.5.5",
+		"@tiptap/extension-text-style": "^2.5.5",
+		"@tiptap/pm": "^2.5.5",
+		"@tiptap/react": "^2.5.5",
+		"@tiptap/starter-kit": "^2.5.5",
 		"@toast-ui/calendar": "^2.1.3",
 		"@types/editorjs__header": "^2.6.3",
 		"axios": "^1.7.1",
@@ -60,9 +67,11 @@
 		"firebase": "^10.12.2",
 		"framer-motion": "^11.0.13",
 		"localforage": "^1.10.0",
+		"lodash": "^4.17.21",
 		"lucide-react": "^0.344.0",
 		"match-sorter": "^6.3.4",
 		"next-themes": "^0.2.1",
+		"novel": "^0.4.3",
 		"path": "^0.12.7",
 		"react": "^18.2.0",
 		"react-day-picker": "^8.10.1",
@@ -80,6 +89,7 @@
 		"zod": "^3.22.4"
 	},
 	"devDependencies": {
+		"@types/lodash": "^4.17.7",
 		"@types/node": "^20.11.24",
 		"@types/react": "^18.2.56",
 		"@types/react-dom": "^18.2.19",
@@ -91,6 +101,7 @@
 		"eslint-plugin-react-hooks": "^4.6.0",
 		"eslint-plugin-react-refresh": "^0.4.5",
 		"postcss": "^8.4.35",
+		"postcss-nesting": "^12.1.5",
 		"tailwindcss": "^3.4.1",
 		"typescript": "^5.2.2",
 		"vite": "^5.1.4"
